vemo-app/main/default/objects/CreditCheck__c/CreditCheck__c.object-meta.xml
<CustomObject>
    <label>Credit Check</label>
    <nameField>
        <displayFormat>CC-{YYYY}{MM}{DD}{000}</displayFormat>
        <label>Credit Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>