vemo-app/main/default/objects/CreditCheck__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECATEAgreement</label>
    <referenceTo>StudentProgram__c</referenceTo>
    <relationshipLabel>Credit Checks</relationshipLabel>
    <relationshipName>CreditChecks</relationshipName>
    <type>Lookup</type>
</CustomField>