vemo-app/main/default/objects/CreditCheck__c/fields/ConsentDateTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>ConsentDateTimeStamp__c</fullName>
    <defaultValue>Now()</defaultValue>
    <inlineHelpText>The date at which the student consented to have their credit checked.</inlineHelpText>
    <label>Consent Date Time Stamp</label>
    <type>DateTime</type>
</CustomField>