vemo-app/main/default/objects/CreditCheck__c/fields/ConsentIPAddress__c.field-meta.xml
<CustomField>
    <fullName>ConsentIPAddress__c</fullName>
    <inlineHelpText>The IP Address from which the student consented to have their credit checked.</inlineHelpText>
    <label>Consent IP Address</label>
    <length>25</length>
    <type>Text</type>
</CustomField>