vemo-app/main/default/objects/CreditCheck__c/fields/CreditCheckDeniedReason__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckDeniedReason__c</fullName>
    <inlineHelpText>If Status is Denied, this indicates one or more reason categories for the denial.</inlineHelpText>
    <label>Credit Check Denied Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditCheckDeniedReason</valueSetName>
    </valueSet>
</CustomField>