vemo-app/main/default/objects/CreditCheck__c/fields/CreditCheckDeniedReasonText__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckDeniedReasonText__c</fullName>
    <inlineHelpText>If Status is Denied, this indicates one or more reason categories for the denial (formatted so it can be included in email communications).</inlineHelpText>
    <label>Credit Check Denied Reason Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>