vemo-app/main/default/objects/CreditCheck__c/fields/JSONPayload__c.field-meta.xml
<CustomField>
    <fullName>JSONPayload__c</fullName>
    <inlineHelpText>The raw results of the credit check module in JSON format.</inlineHelpText>
    <label>JSON Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>