vemo-app/main/default/objects/CreditCheck__c/fields/SchoolSecurity__c.field-meta.xml
<CustomField>
    <fullName>SchoolSecurity__c</fullName>
    <label>School Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>School</valueSetName>
    </valueSet>
</CustomField>