vemo-app/main/default/objects/CreditCheck__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>The result of the credit check (Under Review, Denied, Approved).</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditCheckStatus</valueSetName>
    </valueSet>
</CustomField>