vemo-app/main/default/objects/CreditCheck__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Student related to this Credit Check.</inlineHelpText>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Checks</relationshipLabel>
    <relationshipName>CreditChecks</relationshipName>
    <type>Lookup</type>
</CustomField>