vemo-app/main/default/objects/CreditCheck__c/fields/ValidThroughDate__c.field-meta.xml
<CustomField>
    <fullName>ValidThroughDate__c</fullName>
    <formula>CreatedDate +120</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATE)Valid Through Date</label>
    <type>Date</type>
</CustomField>