vemo-app/main/default/objects/CreditCheck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>ConsentIPAddress__c</columns>
    <columns>ConsentDateTimeStamp__c</columns>
    <columns>SchoolSecurity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>