vemo-app/main/default/objects/CreditCheck__c/listViews/Purude.listView-meta.xml
<ListView>
    <fullName>Purude</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>ConsentIPAddress__c</columns>
    <columns>ConsentDateTimeStamp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchoolSecurity__c</field>
        <operation>equals</operation>
        <value>Purdue</value>
    </filters>
    <label>Purdue</label>
    <sharedTo>
        <allInternalUsers/>
        <portalRoleAndSubordinates>TestCustomerCustomerManager</portalRoleAndSubordinates>
    </sharedTo>
</ListView>